--- a/HTML/htmlcss2025-main/index.html
+++ b/HTML/htmlcss2025-main/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NARDSSHOP.ru</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -48,6 +49,17 @@
                 <h4>Нарды "Черный принц"</h4>
                 <b>₽ 62 500</b>
             </div>
+                        <div>
+                <img src="assets/imgs/ТОВАР4.webp">
+                <h4>Нарды "Черный принц"</h4>
+                <b>₽ 62 500</b>
+            </div>
+                        <div>
+                <img src="assets/imgs/ТОВАР4.webp">
+                <h4>Нарды "Черный принц"</h4>
+                <b>₽ 62 500</b>
+            </div>
+            
             <div>
                 <h3>Обзор</h3>
                 <video width="320" height="240" controls poster="assets/videos/2209725942346.mp4">
